# amelia

./: .env.example  .gitignore  README.md  config.default.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml
docs/superpowers/plans/: 2026-03-25-price-insights-implementation.md
docs/superpowers/specs/: 2026-03-25-price-insights-design.md  2026-03-26-activities-design.md
hooks/: hooks.json  setup-deps.sh
skills/activities/: SKILL.md
skills/award-search/: SKILL.md
skills/flight-search/: SKILL.md
skills/hotel-search/: SKILL.md
skills/setup/: SKILL.md
skills/trip/: SKILL.md
src/amelia/: __init__.py  awards.py  cli.py  config.py  flights.py  hotels.py  models.py  output.py
tests/: test_awards.py  test_cli.py  test_config.py  test_flights.py  test_hotels.py  test_models.py  test_output.py  test_price_signals.py
