[project]
name = "amelia"
version = "0.1.5"
description = "Travel agent CLI — flights, awards, hotels with trip memory"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "flights",
    "serpapi",
    "fast-hotels",
    "selectolax",
    "primp",
]

[project.scripts]
amelia = "amelia.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amelia"]
